# papertalk

./: .gitignore  FINAL_SOLUTION.md  FIX_OUT_DIR_ISSUE.md  README.md  TEST_CASES.md  TROUBLESHOOTING.md  WINDOWS_INSTALL_GUIDE.md  fix-build.bat  index.html  manual-build.bat  package-lock.json  package.json  setup.bat  setup.sh  start-app.bat  verify-fix.bat
.github/: README-CI.md
.github/workflows/: build.yml
demo/: index.html  index.js
docs/: 文说-PaperTalk-PRD-v0.1.md
simple-test/src/: main.rs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ChatPanel.vue  ModelConfig.vue  PdfViewer.vue
src/stores/: app.js
web/: README.md  index.html
web/css/: style.css
web/downloads/: README.md
web/downloads/linux/: PaperTalk-1.0.0.AppImage
web/downloads/macos/: PaperTalk-1.0.0.dmg
web/images/: placeholder.txt
web/js/: i18n.js  script.js
