[package]
name = "papertalk"
version = "0.1.0"
description = "PaperTalk - PDF reading assistant with local LLM translation"
authors = ["PaperTalk Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open", "fs-all", "path-all", "os-all", "window-all", "http-all", "dialog"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
# this feature is used for production builds
custom-protocol = ["tauri/custom-protocol"]
