[package]
name = "papertalk"
version = "0.1.0"
description = "PaperTalk - PDF reading assistant with local LLM translation"
authors = ["PaperTalk Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1"
tauri-plugin-dialog = "2.0"

[features]
# this feature is used for production builds
custom-protocol = ["tauri/custom-protocol"]
